# LMP2

./: CMakeLists.txt  main.cpp
src/classes/: Date.cpp  Date.h  File.cpp  File.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  Size.cpp  Size.h
tests/: Date_test.cpp  File_test.cpp  LinkedList_test.cpp  Node_test.cpp  Size_test.cpp
